--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,8 +3,11 @@ galaxy_info:
   author: "Ogonna Iwunze"
   company: EqualExperts
   license: BSD
-  min_ansible_version: 1.9
+  min_ansible_version: 2.0
   platforms:
+    - name: EL
+      versions:
+        - 7
     - name: Ubuntu
       versions:
         - trusty
