[OI] ensure version specified is installed

--- a/tasks/install-debian.yml
+++ b/tasks/install-debian.yml
@@ -12,5 +12,7 @@
     state:        present
 
 - name: Install kapacitor
-  apt: name=kapacitor state=present
+  apt:
+    name:  "kapacitor={{ kapacitor_version|default('*') }}"
+    state: present
 
