--- a/tasks/install-redhat.yml
+++ b/tasks/install-redhat.yml
@@ -22,4 +22,5 @@
 - name: Install kapacitor
   yum:
     name:  "kapacitor-{{ kapacitor_version|default('*') }}"
+    update_cache: yes
     state: present
