--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,7 +3,7 @@ kapacitor_user: kapacitor
 kapacitor_group: "{{ kapacitor_user }}"
 
 #############
-### Package
+## Package
 kapacitor_version: '*'                # e.g. 0.13.0 or '*' for latest
 kapacitor_signing_key_url: "https://repos.influxdata.com/influxdb.key" 
 kapacitor_apt_repo: "deb https://repos.influxdata.com/{{ ansible_distribution|lower }} {{ ansible_distribution_release }} stable" 
