--- a/tasks/install-debian.yml
+++ b/tasks/install-debian.yml
@@ -1,8 +1,22 @@
 ---
 
-- name: Download and install kapacitor apt public signing key
+# The error below might occur if python is < v2.7.9
+# "Failed to validate the SSL certificate for repos.influxdata.com:443. Make sure your managed systems have a valid CA certificate installed...
+
+#- name: Download and install telegraf apt public signing key
+#  apt_key:
+#    url:   "{{ kapacitor_signing_key_url }}"
+#    state: present
+
+- name: Download telegraf apt public signing key
+  command:
+      wget -q "{{ telegraf_signing_key_url }}" -O /var/tmp/influxdb.key
+  args:
+    creates: /var/tmp/influxdb.key
+
+- name: Install telegraf apt public signing key
   apt_key:
-    url:   "{{ kapacitor_signing_key_url }}"
+    file:  /var/tmp/influxdb.key
     state: present
 
 - name: Add kapacitor apt repository definition to apt sources list
