--- a/tasks/install-redhat.yml
+++ b/tasks/install-redhat.yml
@@ -1,23 +1,21 @@
 ---
 
-## yum_repository available in Ansible v2.0.x or earlier
-##
-#- name: Add InfluxData yum repository file
-#  yum_repository:
-#    name: influxdata
-#    description: InfluxData repository
-#    baseurl: "{{ kapacitor_yum_repo_baseurl }}"
-#    gpgkey: "{{ kapacitor_signing_key_url }}"
-#    gpgcheck: yes
-#    enabled:  yes
+- name: Add InfluxData yum repository file
+  yum_repository:
+    name: influxdb
+    description: "InfluxData Repository - RHEL"
+    baseurl: "{{ kapacitor_yum_repo_baseurl }}"
+    gpgkey: "{{ kapacitor_signing_key_url }}"
+    gpgcheck: yes
+    enabled:  yes
 
-- name: Add influxData yum repository
-  template:
-    src:   influxdata.yum.repo.j2
-    dest:  /etc/yum.repos.d/influxdata.repo
-    owner: root
-    group: root
-    mode:  0644
+#- name: Add influxData yum repository
+#  template:
+#    src:   influxdata.yum.repo.j2
+#    dest:  /etc/yum.repos.d/influxdata.repo
+#    owner: root
+#    group: root
+#    mode:  0644
 
 - name: Install kapacitor
   yum:
